--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
 }
 
 .body-with-background-color {
+	background-image: -webkit-gradient(linear, right top, left top, from(rgba(255,0,0,0)), to(#27472e));
 	background-image: linear-gradient(to left, rgba(255,0,0,0), #27472e);
 }
 
@@ -41,7 +43,6 @@ body {
 
 .navbar .navbar-nav .nav-link:hover {
 	-webkit-transform: scale(1.1);
-	-ms-transform: scale(1.1);
 	transform: scale(1.1);
 }
 
@@ -141,6 +142,37 @@ body {
 	font-size: 35px;
 }
 
+.carousel-start-button button {
+	position: absolute;
+	left: calc(50% - 36.6px / 2);
+	bottom: 3%;
+	font-size: 15px;
+	padding: 20px 1px;
+	border-radius: 100%;
+	cursor: pointer;
+	border: none;
+	animation: buttonPulse 3s linear infinite;
+}
+
+@keyframes buttonPulse {
+	0% {
+		transform: scale(1);
+		box-shadow: 1px 1px 1px 2px rgba(0,0,0, 0.5);
+	}
+	50% {
+		transform: scale(1.2);
+		box-shadow: 1px 2px 3px 3px rgba(0,0,0, 0.5);
+	}
+	50.1% {
+		transform: scale(1.2);
+		box-shadow: 1px 2px 3px 3px rgba(0,0,0, 0.5);
+	}
+	100% {
+		transform: scale(1);
+		box-shadow: 1px 1px 1px 2px rgba(0,0,0, 0.5);
+	}
+}
+
 /*updates*/
 .updates-board {
 	position: relative;
@@ -174,7 +206,8 @@ body {
 
 .hover-style {
 	position: relative;
-	flex-basis: 50%;
+	-ms-flex-preferred-size: 50%;
+	    flex-basis: 50%;
 	height: 300px;
 	overflow: hidden;
 	-webkit-transform: perspective(1000px) rotateY(30deg);
@@ -187,6 +220,7 @@ body {
 .hover-style button {
 	border-radius: 20px;
 	background-color: darkseagreen;
+	-webkit-transition: .5s;
 	transition: .5s;
 }
 .hover-style button:hover {
@@ -197,11 +231,13 @@ body {
 .updates-board-container .buttonOpenOne {
 	color: black;
 	background-color: darkseagreen;
+	-webkit-transition: .5s;
 	transition: .5s;
 }
 .updates-board-container .buttonOpenOne:hover {
 	color: darkseagreen;
 	background-color: black;
+	-webkit-transition: .5s;
 	transition: .5s;
 }
 
@@ -283,7 +319,8 @@ body {
 	width: 300px;
 	background-color: lightgrey;
 	border-radius: 90px;
-	box-shadow: 2px 3px 1px grey;
+	-webkit-box-shadow: 2px 3px 1px grey;
+	        box-shadow: 2px 3px 1px grey;
 }
 
 .section-people-container>div:nth-child(even) {
@@ -310,7 +347,6 @@ body {
 	top: 73px;
 	left: -41px;
 	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
 	position: absolute;
 	border-left: 1px solid #000;
@@ -325,7 +361,6 @@ body {
 	height: 60px;
 	top: 73px;
 	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
 	position: absolute;
 	border-top: 1px solid #000;
@@ -377,10 +412,19 @@ body {
 }
 
 .number {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	height: 300px;
 	width: 300px;
 }
@@ -406,6 +450,7 @@ body {
 footer {
 	position: relative;
 	padding-top: 50px;
+	background-image: -webkit-gradient(linear, left top, right top, from(rgba(255,0,0,0)), to(#274747));
 	background-image: linear-gradient(to right, rgba(255,0,0,0), #274747);
 	z-index: 1;
 }
@@ -466,7 +511,6 @@ footer .about-us .modal button {
 	border: none;
 	-webkit-transition: -webkit-transform 1s;
 	transition: -webkit-transform 1s;
-	-o-transition: transform 1s;
 	transition: transform 1s;
 	transition: transform 1s, -webkit-transform 1s;
 }
@@ -474,7 +518,6 @@ footer .about-us .modal button {
 footer .about-us .modal button:hover {
 	text-decoration: none;
 	-webkit-transform: translateX(50px);
-	-ms-transform: translateX(50px);
 	transform: translateX(50px);
 	background-color: initial;
 }
@@ -606,46 +649,87 @@ footer .footer-bottom a i {
 	color: rgb(33, 192, 46);
 	left: 0;
 	top: 50%;
-	transform: translate(0, -50%);
+	-webkit-transform: translate(0, -50%);
+	        transform: translate(0, -50%);
 	font-size: 25px;
 	letter-spacing: 5px;
 	width: 100%;
 	text-align: center;
 	text-transform: uppercase;
-	animation: changeText 15s linear both infinite;
+	-webkit-animation: changeText 15s linear both infinite;
+	        animation: changeText 15s linear both infinite;
 }
 
 .white-stripe p:nth-child(2) {
-	animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+	        animation-delay: 5s;
 	color: rgb(221, 14, 128);
 }
 .white-stripe p:nth-child(3) {
-	animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+	        animation-delay: 10s;
 	color:rgb(207, 195, 24);
+}
+
+@-webkit-keyframes changeText {
+	0% {
+		-webkit-transform: translate(100%, -50%);
+		        transform: translate(100%, -50%);
+	}
+
+	3% {
+		-webkit-transform: translate(100%, -50%);
+		        transform: translate(100%, -50%);
+	}
+
+	6% {
+		-webkit-transform: translate(0, -50%);
+		        transform: translate(0, -50%);
+	}
+
+	30% {
+		-webkit-transform: translate(0, -50%);
+		        transform: translate(0, -50%);
+	}
+
+	33% {
+		-webkit-transform: translate(-100%, -50%);
+		        transform: translate(-100%, -50%);
+	}
+	100% {
+		-webkit-transform: translate(-100%, -50%);
+		        transform: translate(-100%, -50%);
+	}
 }
 
 @keyframes changeText {
 	0% {
-		transform: translate(100%, -50%);
+		-webkit-transform: translate(100%, -50%);
+		        transform: translate(100%, -50%);
 	}
 
 	3% {
-		transform: translate(100%, -50%);
+		-webkit-transform: translate(100%, -50%);
+		        transform: translate(100%, -50%);
 	}
 
 	6% {
-		transform: translate(0, -50%);
+		-webkit-transform: translate(0, -50%);
+		        transform: translate(0, -50%);
 	}
 
 	30% {
-		transform: translate(0, -50%);
+		-webkit-transform: translate(0, -50%);
+		        transform: translate(0, -50%);
 	}
 
 	33% {
-		transform: translate(-100%, -50%);
+		-webkit-transform: translate(-100%, -50%);
+		        transform: translate(-100%, -50%);
 	}
 	100% {
-		transform: translate(-100%, -50%);
+		-webkit-transform: translate(-100%, -50%);
+		        transform: translate(-100%, -50%);
 	}
 }
 
@@ -805,7 +889,6 @@ footer .footer-bottom a i {
 	border-radius: 10%;
 	background-color: #e74c3c;
 	-webkit-transition-duration: 2s;
-	-o-transition-duration: 2s;
 	transition-duration: 2s;
 	color: #dbd9d9;
 	text-align: center;
@@ -833,7 +916,6 @@ footer .footer-bottom a i {
 	background-color: yellow;
 	height: 35%;
 	-webkit-transition-delay: 1s;
-	-o-transition-delay: 1s;
 	transition-delay: .5s;
 }
 
@@ -841,7 +923,6 @@ footer .footer-bottom a i {
 	background-color: blue;
 	height: 87%;
 	-webkit-transition-delay: 2s;
-	-o-transition-delay: 2s;
 	transition-delay: 1s;
 }
 
@@ -892,7 +973,8 @@ footer .footer-bottom a i {
 
 .hover-style {
 	position: relative;
-	flex-basis: 100%;
+	-ms-flex-preferred-size: 100%;
+	    flex-basis: 100%;
 	height: 80%;
 }
 
@@ -933,21 +1015,28 @@ footer .footer-bottom a i {
 
 .section-people-container {
 	width: 85vw;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 .section-people-container>div:nth-child(odd) {
 	margin-top: 0;
 	height: 120px;
-	flex-basis: 40%;
+	-ms-flex-preferred-size: 40%;
+	    flex-basis: 40%;
 }
 
 .section-people-container>div:nth-child(even) {
 	margin-top: 20px;
 	height: 300px;
-	flex-basis: 100%;
-	order: 2;
+	-ms-flex-preferred-size: 100%;
+	    flex-basis: 100%;
+	-webkit-box-ordinal-group: 3;
+	    -ms-flex-order: 2;
+	        order: 2;
 	position: relative;
 }
 
@@ -971,7 +1060,6 @@ footer .footer-bottom a i {
 	top: 73px;
 	left: -41px;
 	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
 	position: absolute;
 	border-left: 1px solid #000;
@@ -986,7 +1074,6 @@ footer .footer-bottom a i {
 	height: 60px;
 	top: 73px;
 	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
 	position: absolute;
 	border-top: 1px solid #000;
@@ -1205,4 +1292,4 @@ footer .footer-bottom a i {
 	.bands-container {
 		height: 135vh;
 	}
-}
+}}
