delete unnecessary code

--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,6 @@ body {
 	transform: scale(1.1);
 }
 
-/* .navbar .navbar-brand img {
-	width: 100px;
-	height: 80px;
-	border-radius: 20%;
-} */
-
 .navbar .navbar-toggler {
 	background-color: #fff;
 	width: 40px;
@@ -129,7 +123,6 @@ body {
 	background-color: rgba(0, 0, 0, 0.2);
 	margin: 10% 20% 10% 40%;
 	border-radius: 5px;
-	/* padding: 5px; */
 	-webkit-box-shadow: 2px 2px 6px #000;
 	box-shadow: 2px 2px 6px #000;
 }
@@ -147,11 +140,12 @@ body {
 	left: calc(50% - 36.6px / 2);
 	bottom: 3%;
 	font-size: 15px;
-	padding: 20px 1px;
+	padding: 23px 5px;
 	border-radius: 100%;
 	cursor: pointer;
-	border: none;
-	animation: buttonPulse 3s linear infinite;
+	border: 2px solid lightblue;
+	font-weight: bold;
+	animation: buttonPulse 2.5s linear infinite;
 }
 
 @keyframes buttonPulse {
@@ -160,13 +154,13 @@ body {
 		box-shadow: 1px 1px 1px 2px rgba(0,0,0, 0.5);
 	}
 	50% {
-		transform: scale(1.2);
+		transform: scale(1.15);
 		box-shadow: 1px 2px 3px 3px rgba(0,0,0, 0.5);
 	}
-	50.1% {
+	/* 50.1% {
 		transform: scale(1.2);
 		box-shadow: 1px 2px 3px 3px rgba(0,0,0, 0.5);
-	}
+	} */
 	100% {
 		transform: scale(1);
 		box-shadow: 1px 1px 1px 2px rgba(0,0,0, 0.5);
@@ -228,13 +222,17 @@ body {
 	background-color: black;
 }
 
-.updates-board-container .buttonOpenOne {
+.updates-board-container .buttonOpenOne,
+.updates-board-container .buttonOpenTwo,
+.updates-board-container .buttonOpenThree {
 	color: black;
-	background-color: darkseagreen;
+	background-color: rgb(31, 180, 51);
 	-webkit-transition: .5s;
 	transition: .5s;
 }
-.updates-board-container .buttonOpenOne:hover {
+.updates-board-container .buttonOpenOne:hover, 
+.updates-board-container .buttonOpenTwo:hover, 
+.updates-board-container .buttonOpenThree:hover {
 	color: darkseagreen;
 	background-color: black;
 	-webkit-transition: .5s;
@@ -632,7 +630,7 @@ footer .footer-bottom a i {
 	z-index: 1030;
 }
 
-/*INTENCJE*/
+/**/
 .white-stripe {
 	position: relative;
 	background-color: #fff;
@@ -801,9 +799,7 @@ footer .footer-bottom a i {
 	border: none;
 }
 
-/*end of INTENCJE*/
-/*SAKRAMENTY*/
-/*scrollspy*/
+/*  */
 .white-stripe {
 	background-color: #fff;
 	width: 100%;
@@ -888,8 +884,8 @@ footer .footer-bottom a i {
 	height: 10%;
 	border-radius: 10%;
 	background-color: #e74c3c;
-	-webkit-transition-duration: 2s;
-	transition-duration: 2s;
+	-webkit-transition-duration: 1s;
+	transition-duration: 1s;
 	color: #dbd9d9;
 	text-align: center;
 	padding-top: 10px;
@@ -915,15 +911,15 @@ footer .footer-bottom a i {
 .statistics-container:hover div:nth-child(2) {
 	background-color: yellow;
 	height: 35%;
-	-webkit-transition-delay: 1s;
-	transition-delay: .5s;
+	-webkit-transition-delay: .3s;
+	transition-delay: .3s;
 }
 
 .statistics-container:hover div:nth-child(3) {
 	background-color: blue;
 	height: 87%;
-	-webkit-transition-delay: 2s;
-	transition-delay: 1s;
+	-webkit-transition-delay: .5s;
+	transition-delay: .5s;
 }
 
 .statistics-container span {
@@ -951,6 +947,12 @@ footer .footer-bottom a i {
 @media(max-width: 1024px) {
 .my-jumbotron-carousel .carousel-item {
 	height: 45vh;
+}
+
+.carousel-start-button button {
+	bottom: 4%;
+	font-size: 10px;
+	padding: 16px 3px;
 }
 
 /*updates*/
